--- a/styles/kitties.css
+++ b/styles/kitties.css
@@ -1,8 +1,4 @@
 
-body { 
-  overflow: scroll; 
-}
-
 .roboto-regular {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
@@ -36,15 +32,15 @@ body {
     color:#4fabc3;
   }
 
-  footer {
-    position: fixed;
-    justify-content: inherit;
+  .footerimage {
+    background-image: url(..images/lesson04-mock5-cat-logo.png);
+    position: relative;
+    top: 5px;
+    padding-top: 10px;
+    bottom: 5px;
+    width: 100%;
+    height: auto; 
     text-align: center;
-    left: 0;
-    bottom: 0;
-    background-color: #3a3a3a;
-    color: white;
-    height: 300px; width: 100%;
-    font-size: 0.8em;
+    background-color: #3a3a3a;  
+    color:white;
   }
-
