--- a/styles/kitties.css
+++ b/styles/kitties.css
@@ -1,4 +1,5 @@
 
+
 .roboto-regular {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
@@ -24,23 +25,22 @@
     margin: 0;
   }
 
-  header {
-    margin: 100px;
-  }
-
   a {
     color:#4fabc3;
   }
 
   .footerimage {
-    background-image: url(..images/lesson04-mock5-cat-logo.png);
+    padding: 10px;
+    display: flex;
+    flex-direction: column;    
+    justify-content: center;   
+    align-items: center;
     position: relative;
-    top: 5px;
     padding-top: 10px;
     bottom: 5px;
+    height: auto;
     width: 100%;
-    height: auto; 
+    background-color: #3a3a3a;
+    color: white;
     text-align: center;
-    background-color: #3a3a3a;  
-    color:white;
   }
