--- a/styles/kitties.css
+++ b/styles/kitties.css
@@ -15,7 +15,7 @@
       display: block;
       content: 100%;
       width: 20%;
-      margin: 0 150px 0;
+      margin: 0 150px 30px;
       float: right;
       font-family: 'Work Sans', sans-serif;   
     }
@@ -44,3 +44,75 @@
     color: white;
     text-align: center;
   }
+
+
+  .container {
+    height: 300px;
+    margin: 0 auto;
+    padding: 80px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+  }
+
+  article {text-align: center;}
+  h1 {text-align: center;}
+
+    ul {
+        margin: 50px 360px;
+        list-style: none;
+    }
+    ul li {
+        margin: 10px;
+        display: inline-block;
+    }
+    ul li a {
+        padding: 5px;
+        display: inline-block;      
+        border: 1px solid #f2f2f2;
+    }
+    ul li a img {
+        width: 175px;
+        height: 125px;
+        display: block;
+    }
+    ul li a:hover img {
+        transform: scale(1.2);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    }
+
+    .portfolio {
+      font-size: 32px;
+      color:rgb(23, 0, 100);
+      font-weight: bold;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+     }
+
+     nav {
+      text-align: center;
+    }
+    nav ul {
+      display: inline-block;
+      list-style-type: none;
+    
+    }
+    
+    nav ul li {
+      float: left;
+      margin-right: 1.5em;
+    }
+  
+    nav ul li a {
+      padding: 0.25em 1em;
+      text-decoration: none; /* no underline */
+      background-color: rgba(3, 163, 223, .5); 
+      color: black; /* light blue */
+      border: 2px solid black;
+    }
+  
+    nav ul li a:hover, nav ul li a:focus {
+      color: black;
+      background-color: white;
+      font-weight: bold;
+    }
