--- a/styles/kitties.css
+++ b/styles/kitties.css
@@ -49,7 +49,6 @@
   .container {
     height: 300px;
     margin: 0 auto;
-    padding: 80px 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -57,7 +56,7 @@
   }
 
   article {text-align: center;}
-  h1 {text-align: center;}
+  .center {text-align: center;}
 
     ul {
         margin: 50px 360px;
@@ -106,6 +105,7 @@
     nav ul li a {
       padding: 0.25em 1em;
       text-decoration: none; /* no underline */
+      background-color: rgb(0, 92, 128); /*fallback color*/
       background-color: rgba(3, 163, 223, .5); 
       color: black; /* light blue */
       border: 2px solid black;
