--- a/styles/kitties.css
+++ b/styles/kitties.css
@@ -2,23 +2,103 @@
 .wrapper {
   display: grid;
   gap: 1em;
-  grid-template-columns: repeat(12, 1fr);
-  margin: 0 auto;
-  border: 2px dotted #999;
+  margin: 0 auto 0;
   box-sizing: border-box;
   border-radius: 10px;
 }
 
 .header {
-  grid-column: 1 / 13;
-  grid-row: 1;
+  grid-column: 1 / span 12;
+  width: auto;
+  height: auto; 
+  background-position: top;
+  background-size: cover;
+  background-image: url(../images/lesson04-mock2-banner-image.jpg);
+  background-color: #3a3a3a;
+  overflow: hidden;
+  padding: 20px 10px;
 }
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
+
+.video1 {
+  grid-column: 1 / span 5;
+  grid-row: 3 / span 4;
+  width: 70%;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .header-right {
+    float: none;
+  }}
+
+
+  @media (min-width: 600px) {
+    .responsive-img {
+      width: 600px;
+    }
+    
+    .responsive-img {
+      float: none;
+    }}
+
 
 .footer {
   grid-column: 1 / span 12;
+  width: auto;
+  height: 350px; 
+  background-position: top;
+  background-size: cover;
+  background-image: url(../images/lesson04-mock4-footer-image.jpg);
   background-color: #3a3a3a;
   color: white;
-  text-align: center;
+}
+
+.image-overlay {
+  width: 100%;
+  height: auto;
+  text-align: left; 
+  padding-left: 5px;
+  padding-top: 30px;
+  color: white;
+}
+
+.cat-logo {
+  height: 150px;
 }
 
 .sr-only {
@@ -31,37 +111,40 @@
 }
 
 .three {
-  grid-column: 9 / span 2;
+  grid-column: 10 / span 2;
   grid-row: 2 / 4;
+  width: 350px;
 }
 
-.three-zero {
-  grid-column: 9 / span 2;
+.sidebar-cat {
+  width: 350px;
+}
+
+.four {
+  grid-column: 10 / span 2;
   grid-row: 4 / 7;
+  width: 350px;
 }
 
-.three-one {
+.five {
   grid-column: 1 / span 12;
   grid-row: 2;
   text-align: center;
-}
-.four {
-  grid-column: 3;
-  grid-row: 3;
+  align-content: center;
 }
 
-.four-one {
+.six {
   grid-column: 1 / span 12;
   grid-row: 3;
   text-align: center;
 }
-.five {
-  grid-column: 2;
-  grid-row: 4;
-}
-.six {
-  grid-column: 3;
-  grid-row: 4;
+
+.five-linear-gradient {
+  grid-column: 1 / span 12;
+  grid-row: 2;
+  text-align: center;
+  align-content: center;
+  background: linear-gradient(to left, rgb(78, 147, 162), white);
 }
 
 
@@ -97,8 +180,10 @@
     text-align: center;
   }
 
-  .center {text-align: center;
-  width: 100%}
+  .center {
+    text-align: center;
+    width: 100px;
+    align-content: center;}
 
     ul {
         margin: 50px 360px;
@@ -114,8 +199,8 @@
         border: 1px solid #f2f2f2;
     }
     ul li a img {
-        width: 175px;
-        height: 125px;
+        width: 250px;
+        height: 175px;
         display: block;
     }
     ul li a:hover img {
@@ -141,8 +226,8 @@
     nav ul li a {
       padding: 0.9em 1.5em;
       text-decoration: none; /* no underline */
-      background-color: rgb(0, 92, 128); /*fallback color*/
-      background-color: rgba(3, 163, 223, .5); 
+      background-color: rgb(78, 147, 162); /*fallback color*/
+      background-color: rgba(78, 147, 162, .5); 
       color: black; /* light blue */
       border: 2px solid black;
     }
@@ -155,3 +240,11 @@
 
     figure {align-content: center;
    }
+
+
+   .two {
+    grid-column: 3 / span 5;
+    grid-row: 2 / 5;
+  }
+
+
