--- a/styles/kitties.css
+++ b/styles/kitties.css
@@ -82,6 +82,8 @@ body {font-family: Verdana, sans-serif;}
     }}
 
 
+
+
 .footer {
   grid-column: 1 / span 12;
   width: auto;
@@ -115,12 +117,12 @@ body {font-family: Verdana, sans-serif;}
   overflow: hidden;
 }
 
-.body {
+.table-body {
   width: 80%
 }
 
 .three {
-  grid-column: 10 / span 2;
+  grid-column: 9 / span 2;
   grid-row: 2 / 4;
   width: 30%;
 }
@@ -132,7 +134,7 @@ body {font-family: Verdana, sans-serif;}
 }
 
 .four {
-  grid-column: 10 / span 2;
+  grid-column: 9 / span 2;
   grid-row: 4 / 7;
   width: 30%S;
 }
@@ -256,7 +258,7 @@ body {font-family: Verdana, sans-serif;}
     grid-column: 3 / span 4;
     grid-row: 2;
     padding: 70px 25px;
-    width: 40rem;
+    width: 100%;
     background: #4e93a2;
     text-align: center;
   }
@@ -295,7 +297,7 @@ body {font-family: Verdana, sans-serif;}
     grid-column: 3 / span 4;
     grid-row: 3 / 6;
     padding: 70px 25px;
-    width: 40rem;
+    width: 100%;
     background: white;
     text-align: center;
     padding: 10px;
