--- a/styles/kitties.css
+++ b/styles/kitties.css
@@ -22,6 +22,7 @@ body {font-family: Verdana, sans-serif;}
   padding: 20px 10px;
 }
 
+
 .header a {
   float: left;
   color: black;
@@ -89,13 +90,15 @@ body {font-family: Verdana, sans-serif;}
 
 .footer {
   grid-column: 1 / span 12;
-  width: auto;
+  width: 100%;
   height: 350px; 
-  background-position: top;
+  background-position: bottom;
   background-size: cover;
   background-image: url(../images/lesson04-mock4-footer-image.jpg);
   background-color: #3a3a3a;
   color: white;
+  overflow: hidden;
+  padding: 20px 10px;
 }
 
 .image-overlay {
